@@ -1,7 +1,12 @@
 $eterna: CHANGES,v 1.78 2011/11/18 01:25:11 mrg Exp $
 
+changes in bozohttpd 20150320:
+	o  fix redirection handling
+	o  support transport stream (.ts) and video object (.vob) files
+	o  directory listings show correct file sizes for large files
+
 changes in bozohttpd 20140717:
-	o  properly handle SSL errors.
+	o  properly handle SSL errors
 
 changes in bozohttpd 20140708:
 	o  fixes for virtual host support, from rajeev_v_pillai@yahoo.com
